# groucho

./: README.markdown  pyproject.toml
.github/workflows/: python.yml
example/: main.py  requirements.txt
groucho/: __init__.py
